--- a/principal.html
+++ b/principal.html
@@ -15,6 +15,7 @@
 </head>
 <body align= center>
     <h1>ECUADOR</h1>
+    <h2>MANABI</h2>
     <img src="ecua.png" alt="Ecuador mi pais"
     width="500" height="400"/>
    <P>Ecuador, oficialmente República del Ecuador, es un país soberano ubicado en la región noroccidental de América del Sur, compuesto por veinticuatro provincias. Limita al norte con Colombia, al sur y al este con Perú y al oeste con el océano Pacífico, el cual lo separa de las islas Galápagos por mil kilómetros entre la península de Santa Elena y la isla San Cristóbal.</P> 
