se cambio color de fondo en registro

--- a/registro.html
+++ b/registro.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
             Body {color:black;
-             background:greenyellow;}
+             background:blueviolet}
              Em{ color:chartreuse}
         </style>
     <title>REGISTRO</title>
